--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -91,19 +91,6 @@
   line-height: 1.5;
 }
 
-.tagline-container{
-  margin-top: 1rem;
-  margin-bottom: 1.5rem;
-}
-
-.tagline {
-  color: var(--primary-color);
-  font-family: "Raleway", sans-serif;
-  font-size: 1.3rem;
-  line-height: 1.4;
-  max-width: 100%;
-}
-
 .greetings-line {
   color: var(--secondary-color);
   font-size: 1.5rem;
@@ -116,6 +103,126 @@
 
 .name-responsive{
   display: none;
+}
+
+.highlights-text {
+  font-size: 1.7rem;
+  color: var(--secondary-color);
+  line-height: 1.3;
+}
+
+.highlights-container{
+  height: 90px;
+  position: relative;
+}
+
+.highlights-item-1 {
+  position: absolute;
+  top: 0px;
+  animation: highlights-item-1-anim 6s cubic-bezier(0.075, 0.82, 0.165, 1) 1s infinite forwards;
+  opacity: 0.3;
+}
+
+.highlights-item-2 {
+  position: absolute;
+  top: 27px;
+  animation: highlights-item-2-anim 6s cubic-bezier(0.075, 0.82, 0.165, 1) 1s infinite forwards;
+  opacity: 1;
+  color: var(--primary-color);
+}
+
+.highlights-item-3 {
+  position: absolute;
+  top: 54px;
+  animation: highlights-item-3-anim 6s cubic-bezier(0.075, 0.82, 0.165, 1) 1s infinite forwards;
+  opacity: 0.3;
+}
+
+@keyframes highlights-item-1-anim {
+  0% {
+    top: 0px;
+    opacity: 0.3;
+    color: var(--secondary-color);
+  }
+  
+  8% {
+    opacity: 0.1;
+  }
+  
+  33% {
+    top: 54px;
+    opacity: 0.3;
+    color: var(--secondary-color);
+  }
+  
+  66% {
+    top: 27px;
+    opacity: 1;
+    color: var(--primary-color);
+  }
+  
+  100% {
+    top: 0px;
+    opacity: 0.3;
+    color: var(--secondary-color);
+  }
+}
+
+@keyframes highlights-item-2-anim {
+  0% {
+    top: 27px;
+    opacity: 1;
+    color: var(--primary-color);
+  }
+
+  33% {
+    top: 0px;
+    opacity: 0.3;
+    color: var(--secondary-color);
+  }
+
+  41% {
+    opacity: 0.1;
+  }
+  
+  66% {
+    top: 54px;
+    opacity: 0.3;
+    color: var(--secondary-color);
+  }
+
+  100% {
+    top: 27px;
+    opacity: 1;
+    color: var(--primary-color);
+  }
+}
+
+@keyframes highlights-item-3-anim {
+  0% {
+    top: 54px;
+    opacity: 0.3;
+  }
+
+  33% {
+    top: 27px;
+    opacity: 1;
+    color: var(--primary-color);
+  }
+
+  66% {
+    top: 0px;
+    opacity: 0.3;
+  }
+
+  74%{
+    opacity: 0.1;
+  }
+
+  100% {
+    top: 54px;
+    opacity: 0.3;
+  }
 }
 
 @media screen and (max-width: 1450px) {
@@ -175,10 +282,6 @@
     font-size: 4rem;
   }
 
-  .tagline{
-    font-size: 1.2rem;
-  }
-
   .greetings-line{
     font-size: 1rem;
   }
@@ -202,11 +305,19 @@
     font-size: 3.2rem;
   }
 
+  .profile-container {
+    height: 700px;
+  }
+
 }
 
 @media screen and (max-width: 375px) {
 
   .name{
     font-size: 3rem;
+  }
+
+  .profile-container {
+    height: 500px;
   }
 }
